[package]
name = "tcp-over-ws-rust"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = { version = "0.3", features = ["sink"] }
url = "2.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }
trust-dns-resolver = "0.23"
bytes = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"